validaciones if existentes
